feat: inf-3308 adapt charts to support Envoy Gateway

--- a/parcellab/microservice/templates/httproute.yaml
+++ b/parcellab/microservice/templates/httproute.yaml
@@ -1,5 +1,1 @@
-{{- if .Values.httproute }}
-{{- if .Values.httproute.enabled }}
-{{ include "common.httproute" . }}
-{{- end }}
-{{- end }}
+{{- include "common.httproute" . }}
