chore: updatae monolith

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -80,27 +80,21 @@ ingress:
 ##
 
 envoy:
-  httpRoute:
-    enabled: false
-    # parentGateway: gateway-api
-    # parentGatewayNamespace: envoy-gateway
-    # hosts:
-    #   - myapp.gateway.test.parcellab.dev
-    # path: /
-
+  enabled: false
+  gateway:
+    namespace: envoy-gateway
+    name: gateway-api
   referenceGrant:
-    enabled: false
-    # name: custom-grant  # Optional: custom name
-    # namespace: envoy-gateway  # Optional: where to create the grant (default: current namespace)
-    # from:  # Optional: specify what can reference (default: HTTPRoute from current namespace)
-    #   - group: gateway.networking.k8s.io
-    #     kind: HTTPRoute
-    #     namespace: myapp
-    # to:  # Optional: specify what can be referenced (default: Service)
-    #   - group: ""
-    #     kind: Service
-    #   - group: ""
-    #     kind: Secret
+    from:
+      - group: gateway.networking.k8s.io
+        kind: HTTPRoute
+      - group: gateway.networking.k8s.io
+        kind: SecurityPolicy
+    to:
+      - group: gateway.networking.k8s.io
+        kind: Gateway
+        name: gateway-api
+  httpRoutes: []
 
 ##
 ## Cronjob
