chore: added value samples to monolith

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -76,7 +76,7 @@ ingress:
     #     - chart-example.local
 
 ##
-## Envoy Gateway Resources
+## Envoy Gateway
 ##
 
 envoy:
@@ -95,6 +95,50 @@ envoy:
         kind: Gateway
         name: gateway-api
   httpRoutes: []
+  #   - name: my-default-route
+  #     hosts:
+  #       - my-app.example.com
+  #     rules:
+  #       - name: default-route
+  #         matches:
+  #           - path:
+  #               type: PathPrefix
+  #               value: "/"
+  #         backendRefs:
+  #           - name: my-app
+  #             port: 5000
+  #             group: ""
+  #             kind: Service
+  #     labels:
+  #       foo: bar # optional
+  security:
+    enabled: false
+#   enabled: true
+#   issuer: "https://my-issuer-domain.example.com"
+#   redirectURL: "https://my-app.example.com/oauth2/callback"
+#   cookieDomain: "my-app.example.com"
+#   scopes:
+#     - profile
+#     - email
+#   claimToHeaders:
+#     - header: "x-user-email"
+#       claim: "email"
+#   policies:
+#     - name: staff-only
+#       targetRef:
+#         kind: HTTPRoute
+#         name: my-default-route
+#         group: "gateway.networking.k8s.io"
+#       authorizationRules:
+#         - name: member-of-staff-group
+#           action: Allow
+#           principal:
+#             jwt:
+#               provider: my-provider
+#               claims:
+#                 - name: groups
+#                   valueType: StringArray
+#                   values: ["staff"]
 
 ##
 ## Cronjob
